--- a/package.json
+++ b/package.json
@@ -20,9 +20,25 @@
     "eslint": "^7.12.1",
     "gh-pages": "^3.1.0",
     "htmlhint": "^0.14.1",
-    "jest": "^26.6.1",
     "nodemon": "^2.0.9",
     "opener": "^1.5.1",
     "serve": "^11.0.0"
-  }
+  },
+  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Hacker edition](#6-hacker-edition)\r * [7. Consideraciones técnicas](#7-consideraciones-técnicas)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Checklist](#9-checklist)",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NINOSKA2000/LIM015-data-lovers-nat.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/NINOSKA2000/LIM015-data-lovers-nat/issues"
+  },
+  "homepage": "https://github.com/NINOSKA2000/LIM015-data-lovers-nat#readme"
 }
